bluejay-typegen/tests/validation_cases/error/invalid_custom_scalar_overrides.stderr
error: Custom scalar overrides must correspond to a path in the query that is a custom scalar type
  --> tests/validation_cases/error/invalid_custom_scalar_overrides.rs:15:9
   |
15 |         "MyQuery.myField" => super::MyScalarOverride,
   |         ^^^^^^^^^^^^^^^^^

error: Custom scalar overrides must correspond to a path in the query that is a custom scalar type
  --> tests/validation_cases/error/invalid_custom_scalar_overrides.rs:16:9
   |
16 |         "MyQuery.myOtherField" => ::std::primitive::i32,
   |         ^^^^^^^^^^^^^^^^^^^^^^
